# swagger.yaml
@@ -2,7 +2,7 @@ openapi: 3.1.0
 info:
   title: SaleWallet API
   version: 0.0.1
-  description: "Документация API для Salewallet"
+  description: "Документация API для SaleWallet"
 paths:
   /register:
     post:
@@ -28,7 +28,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
-    /confirm-email:
+  /confirm-email:
     get:
       summary: Confirm user email
       tags:
@@ -76,6 +76,48 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+  /login:
+    post:
+      summary: User login
+      tags:
+        - Users
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/LoginInput"
+      responses:
+        "200":
+          description: Login successful
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/LoginResponse"
+        "400":
+          description: Missing username or password
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "401":
+          description: Invalid username or password
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "403":
+          description: Email not confirmed
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
 tags:
   - name: Users
     description: Operations related to user
@@ -94,6 +136,7 @@ components:
           type: string
         password:
           type: string
+
     RegistrationResponse:
       type: object
       properties:
@@ -109,6 +152,35 @@ components:
             created_at:
               type: string
               format: date-time
+
+    LoginInput:
+      type: object
+      required:
+        - username
+        - password
+      properties:
+        username:
+          type: string
+          description: Username or email
+        password:
+          type: string
+          format: password
+
+    LoginResponse:
+      type: object
+      properties:
+        message:
+          type: string
+          example: Login successful
+        user:
+          type: object
+          properties:
+            user_id:
+              type: string
+            username:
+              type: string
+            mail:
+              type: string
     ErrorResponse:
       type: object
       properties:
